# datamigrato

./: .directory  .gitignore  LICENSE.md  README.md  README.rst  README_PYPI.md  cassandra_creds.yaml  mongo_test.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  python-publish.yml
FreeAPI/: .directory
src/: __init__.py
src/datamigrato/: __init__.py  test_py.py
src/datamigrato.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/datamigrato/adapters/: cassandra_adapter.py  firebase_realtime_adapter.py  mongodb_adapter.py
src/datamigrato/handler/: datamigrato.py  datamigrato_handler.py  handler.py
src/datamigrato/migration/: cassandra_migrator.py  firebase_realtime_migrator.py  mongodb_migrator.py
src/datamigrato/utils/: common_utils.py  custom_exception.py
src/my_db_migration/adapters/: mongodb_adapter.py
tests/: conftest.py  test_unit.py  test_unit2.py
tests/unit/: test_unit.py
tests/unit_tests/: test_api_response.py  test_mongodb_migrator.py
