[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
    pymongo==4.6.1
    cassandra-driver==3.29.0
    tabulate==0.9.0
    pytz==2023.3.post1
    pyyaml==6.0.1
    pandas
    astrapy
    firebase-admin==6.4.0
    python_requires ==3.7

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1	
    black>=22.8.0

[options.package_data]
MongoDB-Connect = py.typed
Cassandra-Connect = py.typed
Firebase-Realtime = py.typed
Firestore-Connect = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
